--- a/app/views/layouts/_front_shared_footer.html.erb
+++ b/app/views/layouts/_front_shared_footer.html.erb
@@ -5,9 +5,9 @@
       <a href="#" id="scroll-top" title="Scroll to Top"><i class="fa fa-angle-up"></i><br>Top</a><!-- #scroll-top 回上方按鈕 -->
         <div class="col-md-6 col-sm-2 col-xs-12 footer-social-links-container"><!-- Facebook Start --> 
           <a href="https://www.facebook.com/LadyBooTW" target="_blank">LadyBoo’s Facebook</a>
-          <div class="fb-like" data-href="https://www.facebook.com/LadyBooTW" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
-          <div class="fb-like" data-href="<%= root_url %>" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+          <div class="fb-share-button" data-href="<%= root_url %>" data-layout="button_count"></div>
         </div><!-- Facebook End --> 
+
         <div class="col-md-6 col-sm-10 col-xs-12 footer-text-container">
           <p>
             
