--- a/public/css/pageAccount.css
+++ b/public/css/pageAccount.css
@@ -139,6 +139,8 @@
 #address { padding: 20px 80px; width:100%;overflow: hidden;}
 #address .input-group .input-group-addon { width: 125px; border-radius: 2px 0 0 2px; padding: 0px 10px; line-height: 44px; min-width: 125px; }
 #address p { padding-bottom: 20px; padding-bottom: 0 20px;}
+#address p:before { content:'';display: inline-block;vertical-align: middle;width: 0;height:100%;}
+#address p span{ display: inline-block;vertical-align: middle;}
 #address .input-group { float: left; width: 100%;height:44px; }
 #address .input-group .form-control{width: 70%;}
 #address .input-group p { float: left; width:70%;height:47px;line-height: 16px; display: inline-block; padding:10px 20px; }
