change lookbook nav

--- a/app/views/lookbooks/show.html.erb
+++ b/app/views/lookbooks/show.html.erb
@@ -4,7 +4,7 @@
 
 <% content_for :breadcrumb do %>
   <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'Lookbook', 'javascript:void(0);' %>
-  &nbsp; > &nbsp; <%= link_to "#{@lookbook.name}", 'javascript:void(0);' %>
+  &nbsp; > &nbsp; <%= link_to "穿搭主題", 'javascript:void(0);' %>
 <% end %>
 
 <% if @topic.galleries.select{ |v| v['type'] == 'TopicBannerGallery' }.first  %>
