--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -179,7 +179,7 @@
                         <% lookbook = Lookbook.where(status: 'enable').first %>
                         <% if lookbook %>
                           <div class="col-5">
-                            <div class='mega-menu-title'><%= lookbook.name %></div><!-- End .mega-menu-title -->
+                            <div class='mega-menu-title'>穿搭主題</div><!-- End .mega-menu-title -->
                             <ul class="mega-menu-list clearfix">
                               <% lookbook.topics.each do | topic | %>
                                 <li>
