--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -98,6 +98,9 @@ $("#register-form").submit(function(){
         required:true,
         email: true
       },
+      "user[birthday(1i)]": {required:true},
+      "user[birthday(2i)]": {required:true},
+      "user[birthday(3i)]": {required:true},
       "user[password]": {
         required:true,
         minlength: 8
