--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,9 +27,10 @@
         
           <div id="product-image-container">
             <figure>
+
               <% if @product.galleries.where(type: 'ProductPhotoGallery').first %>
-                <a href="<%= @product.galleries.where(type: 'ProductPhotoGallery').first.attachment.url %>"  class = 'cloud-zoom' id='zoom1' rel="position:'inside',showTitle:true,adjustX:-4,adjustY:-4">
-                  <img src="<%= @product.galleries.where(type: 'ProductPhotoGallery').first.attachment.url %>" />
+                <a href="<%= image_url(@product.galleries.where(type: 'ProductPhotoGallery').first.attachment.url) %>"  class = 'cloud-zoom' id='zoom1' rel="position:'inside',showTitle:true,adjustX:-4,adjustY:-4">
+                  <img src="<%= image_url(@product.galleries.where(type: 'ProductPhotoGallery').first.attachment.url) %>" />
                   <a id="zoom" href="javascript:;" title="放大"></a>
                 </a>  
               <% end %>
