--- a/public/css/pageProduct.css
+++ b/public/css/pageProduct.css
@@ -106,3 +106,7 @@ img.active-slide{border:2px solid #c9006e!important;}
 @media (max-width: 767px) {
 #prodTop .fb-like{display: none;}
 }
+/*----------------------------------------Video*/
+.video-container {position: relative;padding-bottom: 56.25%;padding-top: 30px; height: 0; overflow: hidden;}
+.video-container iframe,.video-container object,
+.video-container embed {position: absolute;top: 0;left: 0;width: 100%;height: 100%;}
