add username length limit

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -93,7 +93,10 @@ $("#register-form").submit(function(){
     $("#register-form").validate({
     //debug: true,
     rules: {
-      "user[user_name]": {required:true},
+      "user[user_name]": {
+        required:true,
+        maxlength: 30
+      },
       "user[email]": {
         required:true,
         email: true
