--- a/public/css/prodList.css
+++ b/public/css/prodList.css
@@ -17,7 +17,7 @@
 .item:hover > .item-image-container .item-image { visibility: visible; opacity: 1;
 }
 /*文字*/
-.item-name { font: 100 1.0em Helvetica, Microsoft JhengHei, "微軟正黑體"; margin: 0 0 5px 0; }
+.item-name { white-space: nowrap;overflow: hidden;text-overflow: ellipsis;font: 100 1.0em Helvetica, Microsoft JhengHei, "微軟正黑體"; margin: 0 0 5px 0; }
 .category-item-container .item:hover .item-name { color: #FFF; }
 .item-meta-container { margin: 20px 0 0 0 }
 .item-action { margin: 5% 0 0 0 }
