add cookie attribute

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,17 +57,7 @@
   </script>
 
   <div id="fb-root"></div>
-  <script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.0";
-    fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-  </head>
-<body>
- <div id="fb-root"></div>
-  <script>
+    <script>
     window.fbAsyncInit = function() {
       FB.init({
         appId      : '380171498811984',
@@ -80,10 +70,14 @@
        var js, fjs = d.getElementsByTagName(s)[0];
        if (d.getElementById(id)) {return;}
        js = d.createElement(s); js.id = id;
-       js.src = "//connect.facebook.net/en_US/sdk.js";
+       js.src = "//connect.facebook.net/zh_TW/sdk.js";
        fjs.parentNode.insertBefore(js, fjs);
      }(document, 'script', 'facebook-jssdk'));
-  </script>
+    </script>
+  </head>
+<body>
+ <div id="fb-root"></div>
+  
   <div id="wrapper">
     <!--Header Start**************************************************************************************************************--> 
     <%= render 'layouts/front_shared_header' %>
