--- a/app/views/layouts/cart.html.erb
+++ b/app/views/layouts/cart.html.erb
@@ -46,10 +46,6 @@
     <% end %>
   }
   </script>
-
-</head>
-<body>
- <div id="fb-root"></div>
   <script>
     window.fbAsyncInit = function() {
       FB.init({
@@ -63,10 +59,14 @@
        var js, fjs = d.getElementsByTagName(s)[0];
        if (d.getElementById(id)) {return;}
        js = d.createElement(s); js.id = id;
-       js.src = "//connect.facebook.net/en_US/sdk.js";
+       js.src = "//connect.facebook.net/zh_TW/sdk.js";
        fjs.parentNode.insertBefore(js, fjs);
      }(document, 'script', 'facebook-jssdk'));
   </script>
+</head>
+<body>
+ <div id="fb-root"></div>
+
   <div id="wrapper">
     <!--Header Start**************************************************************************************************************--> 
     <%= render 'layouts/front_shared_header' %>
